scripts/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-to-www
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: linusweigand.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloweb
            port:
              name: https

Give me the azure terraform code for this. You dont need to create a resource group cluster or virtual network. 

NAMESPACE=ingress-basic

helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
helm repo update

helm install ingress-nginx ingress-nginx/ingress-nginx \
  --create-namespace \
  --namespace $NAMESPACE \
